scss/_custom.scss
/* ... */
#calendar .event-desc :hover {
    background: scale-color(#e4f2f2, $lightness: -15%);
}

#calendar .event-desc {
    color: #666;
    margin: 3px 0 7px 0;
    text-decoration: none;
}

#calendar .event-close>.event-desc {
    color: $white;
    margin: 3px 0 7px 0;
    text-decoration: none;
}

/* ============================
                Mobile Responsiveness
   ============================*/


@media #{$small-only} {

    #calendar .weekdays, #calendar .other-month {
        display: none;
    }

    #calendar li {
        height: auto !important;
        border: 1px solid #ededed;
        width: 100%;
        padding: 10px;
        margin-bottom: -1px;
    }

    #calendar .date {
        float: none;
    }
    #calendar .event {
    clear: both;
    display: block;
    font-size: 0.8rem;
    border-radius: 4px;
    padding: 5px;
    margin-top: 20px;
    margin-bottom: 0px;
    line-height: 1,6rem;
    background: #e4f2f2;
    border: none;
    color: #009aaf;
    text-decoration: none;
}
    #calendar .event-close {
        clear: both;
        display: block;
        font-size: 0.8rem;
        border-radius: 4px;
        padding: 5px;
        margin-top: 20px;
        margin-bottom: 0px;
        line-height: 1,6rem;
    }
}

/*===================================================================
tabs
===================================================================*/

.tab-title {
    border-right-style: solid;
    border-width: 1px;
    border-color: $white;
}

/*===================================================================
privacy
===================================================================*/

.privacy {
    font-size: 0,8rem;
}

/*===================================================================
prenota
===================================================================*/
.extra-space-turno {
    margin-top: 0.25rem;
    @media #{$small-only} {
        margin-top: 0.2rem;
        margin-bottom: 0rem;
    }
}

::-webkit-input-placeholder {
  color: #b5b3b3; }

:-moz-placeholder {
  /* Firefox 18- */
  color: #b5b3b3; }

::-moz-placeholder {
  /* Firefox 19+ */
  color: #b5b3b3; }

:-ms-input-placeholder {
  color: #b5b3b3; }

#dashboard {
    @media
      only screen
    and (max-width: 760px), (min-device-width: 768px)
    and (max-device-width: 1024px)  {
/* Force table to not be like tables anymore */
    table, thead, tbody, th, td, tr {
            display: block;
        }
/* Hide table headers (but not display: none;, for accessibility) */
    thead tr {
            position: absolute;
            top: -9999px;
            left: -9999px;
        }

    tr {
      margin: 0 0 1rem 0;
    }

    tr:nth-child(odd) {
      background: #ccc;
    }

    td {
        /* Behave  like a "row" */
        border: none;
        border-bottom: 1px solid #eee;
        position: relative;
        padding-left: 50%;
    }

    td:before {
            /* Now like a table header */
        position: absolute;
            /* Top/left values mimic padding */
        top: 0;
        left: 6px;
        width: 45%;
        padding-right: 10px;
        white-space: nowrap;
    }

/*  Label the data
    You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
        */
        td:nth-of-type(1):before { content: "Nome"; }
        td:nth-of-type(2):before { content: "Telefono"; }
        td:nth-of-type(3):before { content: "Email"; }
        td:nth-of-type(4):before { content: "Orario"; }
        td:nth-of-type(5):before { content: "Numero persone"; }
        td:nth-of-type(6):before { content: "Tavolo"; }
        td:nth-of-type(7):before { content: "Seggioloni"; }
        td:nth-of-type(8):before { content: "Cani"; }
        td:nth-of-type(9):before { content: "Note"; }
    }
}

#loading {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100vw;
  height: 100vh;
  background-color: rgba(192, 192, 192, 0.9);
  background-image: url('https://www.beerstrot.it//asset/img/loading1.gif');
  background-repeat: no-repeat;
  background-position: center;
  text-align: center;
  font-size: 24px;
}

